--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,15 +121,7 @@ body {
   color : white;
 }
 
-input[type=text]:focus ,
-input[type=password]:focus ,  
-input[type=range]:focus , 
-input[type=email]:focus ,  
-input[type=search]:focus,
-input[type=file]:focus,
-input[type=number]:focus,
-textarea#description:focus
-{
+.form-control:focus{
   box-shadow: 0 0 4px  #FF496A;
   border: 1px solid #FF496A;
 }
@@ -138,6 +130,15 @@ textarea#description:focus
   box-shadow: none;
 }
 
+
+/* tags */
+.show-tags{
+  font-weight: 300;
+  padding: 2px 7px;
+  margin: 3px;
+  background: rgba(0, 0, 0, 0.116);
+  border-radius: 10px;
+}
 
 
 /* Icons */
