--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -35,6 +35,16 @@
                     <i class="fa-solid fa-globe"></i>
                     <%= listing.country %>
                 </p>
+                <span>
+                    <% for(let tag of listing.tags ) {%>
+                        <span class="show-tags">
+                            <i class="fa-light fa-hashtag"></i>
+                            <%= tag %>
+                        </span>
+                        <% } %>
+                </span>
+                <br>
+                <br>
             </div>
         </div>
 
