--- a/views/Listings/index.ejs
+++ b/views/Listings/index.ejs
@@ -68,12 +68,12 @@
                                 <%= listing.country %> <br />
                                     <br>
                                     <span>
-                                        <% for(let tag of listing.tags ) {%>
+                                        <% for(let tag of listing.tags ) { if(tag !="null" ) {%>
                                             <span class="show-tags">
                                                 <i class="fa-light fa-hashtag"></i>
                                                 <%= tag %>
                                             </span>
-                                            <% } %>
+                                            <% } } %>
                                     </span>
                         </p>
                     </div>
