--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -58,7 +58,8 @@
                 <button class="btn btn-dark">DELETE</button>
             </form>
             <% } else { %>
-                <a class="btn btn-red" href="/listings/<%= listing._id  %>/book">Book</a>
+                <a class="btn btn-red " href="/listings/<%= listing._id  %>/book"> Book </a>
+                <a class="btn btn-red mx-3" href="/listings/<%= listing._id  %>/chat"> Chat </a>
                 <% } %>
     </div>
     <hr>
