--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,15 +1,18 @@
-<footer class="mt-5">
-    <div class="f-info">
-        <div class="f-info-socials">
-            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-linkedin-in"></i></a>
-
+<footer class="mt-5 bg-gray-100 py-8">
+    <div class="text-center">
+        <div class="flex justify-center space-x-6 mb-4">
+            <a href="https://github.com/JaiminPatel345/wanderlust" class="text-gray-500 hover:text-pink-500"><i
+                    class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://github.com/JaiminPatel345/wanderlust" class="text-gray-500 hover:text-pink-500"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/JaiminPatel345/wanderlust" class="text-gray-500 hover:text-pink-500"><i
+                    class="fa-brands fa-linkedin-in"></i></a>
         </div>
-        <div> &copy; Wanderlust private limited - Jaimin Detroja</div>
-        <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+        <div>&copy; Wanderlust private limited - Jaimin Detroja</div>
+        <div class="flex justify-center space-x-6 mt-4 text-gray-500">
+            <a href="" class="hover:underline">Privacy</a>
+            <a href="" class="hover:underline">Terms</a>
+            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
 </footer>
