--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,32 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<nav class="bg-gray-100 border-b sticky top-0 z-50 py-4">
+  <div class="container mx-auto flex items-center justify-between">
+    <a class="text-2xl text-rose-500" href="/"><i class="fa-regular fa-compass"></i></a>
+    <button class="lg:hidden text-gray-700">
+      <span class="fa fa-bars"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link bn3637 bn38" href="/listings">Explore</a>
+    <div class="hidden lg:flex space-x-4">
+      <a class="text-gray-700 hover:text-black transition bn3637 bn38 mx-2" href="/listings">Explore</a>
+    </div>
+    <div class="hidden lg:flex space-x-4 ml-auto">
+      <div class="flex space-x-2">
+        <input class="form-control p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring focus:ring-white"
+          type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-red bg-rose-500 text-white px-4 py-2 rounded-lg hover:bg-rose-600 transition"
+          id="search-btn" type="submit">Search</button>
       </div>
-
-      <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
-          <input class="form-control search-bar me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-red btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link bn3637 bn38" href="/listings/new">List your property</a>
-        <% if(!currUser) { %>
-          <a class="nav-link bn3637  " href="/signup">Sign Up</a>
-          <a class="nav-link bn3637 " href="/login">Log In</a>
-          <% } %>
-            <% if(currUser) { %>
-              <a class="nav-link bn3637" href="/logout">Log out</a>
-              <% } %>
-      </div>
+    </div>
+    <div class="hidden lg:flex space-x-4 ml-auto">
+      <a class="rounded-md border border-transparent py-2 px-4 text-center text-sm transition-all text-slate-600 hover:bg-gray-300 focus:bg-slate-100 active:bg-slate-100 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+        href="/listings/new">List your property</a>
+      <a class="rounded-md border border-transparent py-2 px-4 text-center text-sm transition-all text-slate-600 hover:bg-gray-300 focus:bg-slate-100 active:bg-slate-100 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+        href="/chats">Chats</a>
+      <% if(!currUser) { %>
+        <a class="rounded-md border border-transparent py-2 px-4 text-center text-sm transition-all text-slate-600 hover:bg-gray-300 focus:bg-slate-100 active:bg-slate-100 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          href="/signup">Sign Up</a>
+        <a class="rounded-md border border-transparent py-2 px-4 text-center text-sm transition-all text-slate-600 hover:bg-gray-300 focus:bg-slate-100 active:bg-slate-100 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+          href="/login">Log In</a>
+        <% } %>
+          <% if(currUser) { %>
+            <a class="rounded-md border border-transparent py-2 px-4 text-center text-sm transition-all text-slate-600 hover:bg-gray-300 focus:bg-slate-100 active:bg-slate-100 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+              href="/logout">Log out</a>
+            <% } %>
     </div>
   </div>
 </nav>
